--- a/.github/workflows/pester-test-demo.yml
+++ b/.github/workflows/pester-test-demo.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: $
+    runs-on: ${{ matrix.os }}
     timeout-minutes: 90
     steps:
     - uses: actions/checkout@v2
