--- a/.github/workflows/pester-test-demo.yml
+++ b/.github/workflows/pester-test-demo.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   invoke-pester-pwsh:
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
@@ -23,7 +24,8 @@ jobs:
         Write-host $PSVersionTable.PSVersion.Major $PSVersionTable.PSRemotingProtocolVersion.Minor
         Set-PSRepository psgallery -InstallationPolicy trusted
         Install-Module -Name Pester -RequiredVersion 5.0.4 -confirm:$false -Force
-        switch (${{ matrix.os }}) {
+        $matrixOS = ${{ matrix.os }}
+        switch ($matrixOS) {
           ubuntu-latest {
             . "./PowerShell/JumpCloud Module/Tests/InvokePester.ps1" -JumpCloudApiKey $env:XAPIKEY_PESTER_LINUX -JumpCloudApiKeyMsp $env:XAPIKEY_PESTER_MTP -ExcludeTagList "ModuleValidation, JCDeployment, MSP" -IncludeTagList "*" -RequiredModulesRepo "PSGallery"
             }
