--- a/.github/workflows/pester-test-demo.yml
+++ b/.github/workflows/pester-test-demo.yml
@@ -29,7 +29,7 @@ jobs:
         . "./PowerShell/JumpCloud Module/Tests/SetupOrg.ps1" -JumpCloudApiKey $env:XAPIKEY_PESTER -JumpCloudApiKeyMsp $env:XAPIKEY_PESTER
       shell: pwsh
   Get-JCUsers-Test:
-    requires: setup-pester-environment
+    needs: setup-pester-environment
     strategy:
       fail-fast: false
       matrix:
